logs/hide-my-wp

1279 |   const t = "/internal/headers.json";
1280 |   if (!this.fileExists(t))
1281 |     throw new Error(
1282 |       "SAPI Error: Could not find response headers file."
1283 |     );
1284 |   const e = JSON.parse(this.readFileAsText(t)), r = {};
                        ^
SyntaxError: JSON Parse error: Unexpected EOF
      at Z (/home/runner/work/playground-tester/playground-tester/node_modules/@php-wasm/universal/index.js:1284:18)
      at /home/runner/work/playground-tester/playground-tester/node_modules/@php-wasm/universal/index.js:1435:59

Bun v1.1.30 (Linux x64 baseline)
